# Linear-Regression

./: .gitignore  CMakeLists.txt
Linear Regression/: CMakeLists.txt  Linear Regression.cpp  Linear Regression.h
linearRegression/: CMakeLists.txt  linearRegression.cpp  linearRegression.h  main.cpp
linearRegression/models/: CMakeLists.txt  linearRegression.cu  linearRegression.cuh  linearRegression.h  linearRegression_fwd.cuh
linearRegression/models/utils/: CMakeLists.txt  calculateMatrixResult.cu  calculateMatrixResult.cuh  calulculateMatrixResult.cu  calulculateMatrixResult.cuh  matrix_utils.cu  matrix_utils.cuh
vectorAdd/: README.md  vectorAdd.cu
